--- a/index.html
+++ b/index.html
@@ -3,233 +3,229 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lula Commission</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Mitr:wght@300;400;500;600&display=swap" rel="stylesheet">
+<title>Lula | chxb.lu</title>
 
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap');
+
 *{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:'Mitr',sans-serif;
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family: 'Prompt', sans-serif;
 }
 
 body{
-  background:linear-gradient(180deg,#eaf4fb,#dff0fb);
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height:100vh;
-  overflow:hidden;
+    background: linear-gradient(to bottom, #f8fbff, #eaf4ff);
+    color:#1c2b3a;
+    overflow-x:hidden;
+    position:relative;
 }
 
-/* ===== POPUP ===== */
-.popup{
-  width:100%;
-  max-width:520px;
-  height:90vh;
-  background:#cfe7f6;
-  border-radius:30px;
-  box-shadow:0 30px 70px rgba(0,0,0,0.18);
-  overflow:hidden;
-  display:flex;
-  flex-direction:column;
-  position:relative;
-  z-index:2;
-}
-
-.popup-header{
-  background:#f2f2f2;
-  padding:15px;
-  text-align:center;
-  font-weight:600;
-  font-size:18px;
-}
-
-.content{
-  padding:25px;
-  overflow-y:auto;
-}
-
-/* ===== SECTIONS ===== */
-.section{
-  background:#f4f4f4;
-  border-radius:22px;
-  padding:20px;
-  margin-bottom:20px;
-}
-
-.section-title{
-  font-weight:600;
-  color:#2f6d91;
-  margin-bottom:12px;
-  font-size:18px;
-}
-
-/* ===== STEPS ===== */
-.step{
-  display:flex;
-  gap:12px;
-  margin-bottom:14px;
-}
-
-.circle{
-  min-width:32px;
-  height:32px;
-  background:#5ea9d6;
-  color:white;
-  border-radius:50%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-}
-
-/* ===== BULLET ===== */
-.bullet{
-  margin-bottom:10px;
-}
-
-/* ===== CONTACT ===== */
-.contact-box{
-  background:#e6f2fa;
-  padding:15px;
-  border-radius:15px;
-}
-
-.button{
-  display:block;
-  text-align:center;
-  background:#4aa3d6;
-  color:white;
-  padding:14px;
-  border-radius:40px;
-  margin:15px 0;
-  text-decoration:none;
-  font-weight:500;
-}
-
-/* ===== HORIZONTAL IMAGE SLIDE ===== */
-.images{
-  display:flex;
-  gap:15px;
-  overflow-x:auto;
-  scroll-snap-type:x mandatory;
-}
-
-.images img{
-  flex:0 0 85%;
-  border-radius:18px;
-  scroll-snap-align:center;
-}
-
-/* ===== FLOATING EMOJI ===== */
+/* Floating Background */
 .floating{
-  position:fixed;
-  font-size:24px;
-  animation:floatUp 7s infinite ease-in-out;
-  opacity:0.7;
-  pointer-events:none;
-  z-index:1;
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    overflow:hidden;
+    z-index:0;
+    pointer-events:none;
 }
 
-.f1{ left:8%; bottom:-20px; }
-.f2{ left:75%; bottom:-40px; animation-delay:2s; }
-.f3{ left:40%; bottom:-60px; animation-delay:4s; }
+.floating span{
+    position:absolute;
+    font-size:20px;
+    opacity:0.08;
+    animation:floatUp 25s linear infinite;
+}
 
 @keyframes floatUp{
-  0%{ transform:translateY(0) rotate(0deg); opacity:0; }
-  20%{ opacity:0.8; }
-  50%{ transform:translateY(-250px) rotate(10deg); }
-  100%{ transform:translateY(-500px) rotate(-10deg); opacity:0; }
+    from{ transform:translateY(100vh);}
+    to{ transform:translateY(-10vh);}
 }
 
-/* ===== FOOTER ===== */
+/* Section */
+section{
+    padding:60px 20px;
+    position:relative;
+    z-index:1;
+    max-width:1000px;
+    margin:auto;
+}
+
+h1,h2,h3{
+    font-weight:600;
+    color:#2b4f73;
+}
+
+.hero{
+    text-align:center;
+    padding-top:80px;
+}
+
+.hero h1{
+    font-size:40px;
+    letter-spacing:2px;
+}
+
+.hero p{
+    margin-top:10px;
+    color:#5d7fa3;
+}
+
+/* Card */
+.card{
+    background:white;
+    border-radius:18px;
+    padding:30px;
+    box-shadow:0 10px 30px rgba(0,0,0,0.05);
+    margin-bottom:40px;
+}
+
+.card h3{
+    margin-bottom:15px;
+    font-size:22px;
+}
+
+.card ul{
+    padding-left:20px;
+}
+
+.card li{
+    margin-bottom:10px;
+    line-height:1.6;
+}
+
+.notice{
+    margin-top:15px;
+    color:#2f6db3;
+    font-weight:500;
+}
+
+.image-box{
+    margin-top:20px;
+}
+
+.image-box img{
+    width:100%;
+    border-radius:15px;
+    box-shadow:0 8px 25px rgba(0,0,0,0.08);
+}
+
+.steps li{
+    margin-bottom:12px;
+}
+
 .footer{
-  text-align:center;
-  font-size:13px;
-  margin-top:20px;
-  color:#2f6d91;
+    text-align:center;
+    padding:40px 20px;
+    font-size:14px;
+    color:#6b8cab;
+}
+
+.contact{
+    margin-top:15px;
+    font-weight:500;
+}
+
+@media(min-width:768px){
+    .hero h1{font-size:50px;}
 }
 </style>
 </head>
 
 <body>
 
-<!-- FLOATING EMOJI -->
-<div class="floating f1">🌸</div>
-<div class="floating f2">✨</div>
-<div class="floating f3">💧</div>
-
-<div class="popup">
-
-<div class="popup-header">
-commission
+<div class="floating">
+<span style="left:5%;">🩵</span>
+<span style="left:15%; animation-duration:30s;">💙</span>
+<span style="left:25%; animation-duration:28s;">🤍</span>
+<span style="left:35%; animation-duration:22s;">✨</span>
+<span style="left:45%; animation-duration:26s;">🌟</span>
+<span style="left:55%; animation-duration:32s;">🫧</span>
+<span style="left:65%; animation-duration:24s;">☁️</span>
+<span style="left:75%; animation-duration:29s;">🌸</span>
+<span style="left:85%; animation-duration:27s;">💙</span>
 </div>
 
-<div class="content">
+<!-- Hero -->
+<section class="hero">
+    <h1>CHXB.LU</h1>
+    <p>Lula | chxb.lu</p>
+</section>
 
-<div class="section">
-<div class="section-title">ขั้นตอนการสั่งงาน</div>
+<!-- แนะนำ + ระยะเวลา -->
+<section>
+    <div class="card">
+        <h3>รายละเอียดงานลายน้ำ</h3>
+        <ul>
+            <li>ระยะเวลาในการทำงาน 1-2 วัน/งาน</li>
+            <li>งานออกแบบโทนฟ้า-ขาว แนวคลีน น่ารัก มืออาชีพ</li>
+        </ul>
+    </div>
+</section>
 
-<div class="step"><div class="circle">1</div>
-<div>ติดต่อร้านผ่าน Facebook / IG / X ตามช่องทางด้านล่าง</div></div>
+<!-- ประเภทลายน้ำ -->
+<section>
 
-<div class="step"><div class="circle">2</div>
-<div>แจ้งประเภทที่ต้องการ — YCH (V.1–8) หรือ CMS พร้อมส่งรูปอ้างอิง</div></div>
+    <div class="card">
+        <h3>ลายน้ำ CMS</h3>
+        <ul>
+            <li>แจ้ง/ส่งภาพลายน้ำมาแจ้งว่าสนใจแบบไหน</li>
+            <li>สามารถบรีฟของตกแต่งหรือแนวงานได้ (ไม่นอกแนวร้านเกินไป)</li>
+            <li>แจ้งชื่อ/ข้อความ (ไทย/อังกฤษ) และขนาดตัวอักษร</li>
+            <li>แจ้งโทนสีที่ต้องการ (มีเรฟแนบได้)</li>
+        </ul>
+        <div class="image-box">
+            <img src="459F6BEE-9466-4674-9D66-9BAA2674DB82.jpeg" alt="CMS Example">
+        </div>
+    </div>
 
-<div class="step"><div class="circle">3</div>
-<div>แจ้งรายละเอียด: ชื่อ / ข้อความ / โทนสี / ของตกแต่ง / การจัดวาง</div></div>
+    <div class="card">
+        <h3>ลายน้ำ YCH (V.1–8)</h3>
+        <ul>
+            <li>แจ้ง Ver. (V.1-8) ที่สนใจ</li>
+            <li>เพิ่มของตกแต่งนอกเหนือจากตัวอย่าง บวกเพิ่ม 5 บาท / 1 ชิ้น</li>
+            <li>แจ้งชื่อ/ข้อความ (ไทย/อังกฤษ) และรูปแบบการจัดวาง</li>
+            <li>เลือกแบบลงสี: ไล่สี หรือ แยกสีทีละจุดสลับกัน</li>
+        </ul>
+        <div class="image-box">
+            <img src="87590762-D07E-4FDF-86ED-5BBB18533848.jpeg" alt="YCH Example">
+        </div>
+    </div>
 
-<div class="step"><div class="circle">4</div>
-<div>ชำระเงิน และรอรับงานภายใน 1–2 วัน/งาน 🎉</div></div>
-</div>
+</section>
 
-<div class="section">
-<div class="section-title">เงื่อนไขการรับงาน</div>
+<!-- ขั้นตอน -->
+<section>
+    <div class="card">
+        <h3>ขั้นตอนการสั่งงาน</h3>
+        <ul class="steps">
+            <li>1. แจ้งประเภทงาน (CMS หรือ YCH)</li>
+            <li>2. ส่งรายละเอียดบรีฟครบถ้วน</li>
+            <li>3. รอออกแบบ 1-2 วัน</li>
+            <li>4. ส่งงานและตรวจสอบความเรียบร้อย</li>
+        </ul>
+    </div>
+</section>
 
-<div class="bullet">✨ ระยะเวลาในการทำงาน 1–2 วัน/งาน</div>
-<div class="bullet">✨ ของตกแต่งเพิ่มเติมนอกเหนือจากตัวอย่าง บวกเพิ่มอย่างละ 5 ฿ / 1 ชิ้น</div>
-<div class="bullet">✨ สามารถใส่ชื่อ/ข้อความได้ทั้งภาษาไทย ภาษาอังกฤษ ฯลฯ</div>
-<div class="bullet">✨ หากมีเรฟ สามารถแนบเรฟเพิ่มมาได้เลยค่ะ</div>
-<div class="bullet">✨ การลงสีรบกวนแจ้งว่า ต้องการแบบไล่สี หรือระบายแยกสีแต่ละสีในทีละจุดสลับกัน</div>
-</div>
-
-<div class="section">
-<div class="section-title">บริการเพิ่มเติม</div>
-<div class="contact-box">
-🎨 ออกแบบสำหรับ CMS<br><br>
-ทางร้านออกแบบแนว “โอมากาเสะ” สามารถปรับของตกแต่ง หรือสีต่างๆ ที่อยากให้วาดลงได้ค่ะ หรือแนวธีมงานก็ได้ แต่ไม่ยากจนเกินไป ทางร้านถนัดแนวน่ารักๆ 🌊
-</div>
-</div>
-
-<div class="section">
-<div class="section-title">ติดต่อ</div>
-
-<div class="contact-box">
-• Facebook : Lula<br>
-• IG : chxb.lula<br>
-• X (Twitter) : @LalaChxb
-</div>
-
-<a href="#" class="button">📩 ติดต่อสั่งงาน</a>
+<!-- ติดต่อ -->
+<section>
+    <div class="card">
+        <h3>ช่องทางติดต่อ</h3>
+        <div class="contact">
+            Facebook : Lula<br>
+            IG : chxb.lula<br>
+            X : @LalaChxb
+        </div>
+    </div>
+</section>
 
 <div class="footer">
-© Lula | chxb.lu · Thank you for your support from our lovely customers. Wishing you happiness forever. 💙
-</div>
-</div>
-
-<div class="section">
-<div class="section-title">รายละเอียดตัวอย่างงาน</div>
-
-<div class="images">
-<img src="banner1.jpg">
-<img src="banner2.jpg">
-</div>
-
-</div>
-
-</div>
+This is the work of Lula Shop. Do not claim or steal the work.  
+Every work has an owner. Thank you for your support.
 </div>
 
 </body>
