--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>CHXB.LU | Lula</title>
 
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@400;500;600&display=swap');
 
 *{
     margin:0;
@@ -16,85 +16,102 @@
 }
 
 body{
-    background:#eaf2fb;
-    color:#000;
+    background:#dfeaf6;
     overflow-x:hidden;
     position:relative;
 }
 
-/* Floating Background */
-.floating-bg{
+/* Floating Emoji */
+.floating{
     position:fixed;
     inset:0;
-    overflow:hidden;
     pointer-events:none;
     z-index:0;
 }
 
-.floating-bg span{
+.floating span{
     position:absolute;
     bottom:-50px;
-    font-size:18px;
     opacity:0.07;
+    font-size:20px;
     animation:floatUp linear infinite;
 }
 
-.floating-bg span:nth-child(1){ left:5%; animation-duration:35s; font-size:16px;}
-.floating-bg span:nth-child(2){ left:15%; animation-duration:40s; font-size:22px;}
-.floating-bg span:nth-child(3){ left:25%; animation-duration:32s;}
-.floating-bg span:nth-child(4){ left:35%; animation-duration:38s; font-size:20px;}
-.floating-bg span:nth-child(5){ left:45%; animation-duration:42s;}
-.floating-bg span:nth-child(6){ left:55%; animation-duration:36s; font-size:17px;}
-.floating-bg span:nth-child(7){ left:65%; animation-duration:44s;}
-.floating-bg span:nth-child(8){ left:75%; animation-duration:39s;}
-.floating-bg span:nth-child(9){ left:85%; animation-duration:37s;}
-.floating-bg span:nth-child(10){ left:50%; animation-duration:41s;}
-.floating-bg span:nth-child(11){ left:30%; animation-duration:33s;}
-.floating-bg span:nth-child(12){ left:70%; animation-duration:45s;}
+.floating span:nth-child(1){left:5%;animation-duration:40s;}
+.floating span:nth-child(2){left:15%;animation-duration:35s;}
+.floating span:nth-child(3){left:25%;animation-duration:45s;}
+.floating span:nth-child(4){left:35%;animation-duration:38s;}
+.floating span:nth-child(5){left:45%;animation-duration:50s;}
+.floating span:nth-child(6){left:55%;animation-duration:42s;}
+.floating span:nth-child(7){left:65%;animation-duration:37s;}
+.floating span:nth-child(8){left:75%;animation-duration:48s;}
 
 @keyframes floatUp{
-    from{ transform:translateY(0);}
-    to{ transform:translateY(-120vh);}
+    from{transform:translateY(0);}
+    to{transform:translateY(-120vh);}
 }
 
-section{
+/* Layout */
+.container{
     max-width:1100px;
     margin:auto;
-    padding:60px 20px;
+    padding:80px 20px;
     position:relative;
     z-index:2;
 }
 
 .hero{
     text-align:center;
-    padding-top:100px;
+    margin-bottom:60px;
 }
 
 .hero h1{
-    font-size:60px;
+    font-size:64px;
     letter-spacing:2px;
 }
 
 .hero p{
-    font-size:20px;
     color:#5a8ecb;
+    font-size:20px;
 }
 
-.card{
-    background:#f3f6fa;
+.block{
+    background:#ffffff;
     padding:40px;
-    border-radius:18px;
-    margin-bottom:60px;
+    margin-bottom:80px;
+    border-radius:10px;
+    position:relative;
 }
 
-.card h2{
-    margin-bottom:25px;
-    font-size:28px;
+/* Label style */
+.label-black{
+    position:absolute;
+    top:-25px;
+    left:0;
+    background:#000;
+    color:#fff;
+    padding:10px 25px;
+    font-weight:500;
 }
 
-ul{
+.label-blue{
+    position:absolute;
+    top:15px;
+    left:0;
+    background:#6ea1d9;
+    color:#fff;
+    padding:8px 20px;
+    font-size:14px;
+}
+
+.content{
+    margin-top:40px;
     line-height:1.9;
     font-size:18px;
+}
+
+.content p{
+    margin-bottom:15px;
 }
 
 .image{
@@ -103,23 +120,20 @@ ul{
 
 .image img{
     width:100%;
-    border-radius:12px;
+    border-radius:8px;
 }
 
 .footer{
     text-align:center;
     font-size:14px;
-    padding:40px 20px;
-    position:relative;
-    z-index:2;
+    margin-top:40px;
 }
 </style>
 </head>
 
 <body>
 
-<!-- Floating Emojis -->
-<div class="floating-bg">
+<div class="floating">
 <span>🩵</span>
 <span>💙</span>
 <span>🤍</span>
@@ -128,67 +142,58 @@ ul{
 <span>🫧</span>
 <span>☁️</span>
 <span>🌸</span>
-<span>💙</span>
-<span>🩵</span>
-<span>✨</span>
-<span>🫧</span>
 </div>
 
-<section class="hero">
-    <h1>CHXB.LU</h1>
-    <p>Lula | chxb.lu</p>
-</section>
+<div class="container">
 
-<section>
+<div class="hero">
+<h1>CHXB.LU</h1>
+<p>Lula | chxb.lu</p>
+</div>
 
-<div class="card">
-<h2>YCH ( V.1-8 )</h2>
-<p style="background:#6ea1d9;color:white;display:inline-block;padding:8px 16px;border-radius:8px;margin-bottom:20px;">
-รายละเอียดการบรีฟ
-</p>
+<!-- YCH -->
+<div class="block">
+<div class="label-black">YCH ( V.1-8 )</div>
+<div class="label-blue">รายละเอียดการบรีฟ</div>
 
-<ul>
-<li>แจ้ง Ver.ของลายน้ำ (V.1-8) ว่าสนใจแบบไหน? หากจบแบบที่สนใจมาด้วย ยิ่งดีเลยค่ะ</li>
-<li>กรณีต้องการเพิ่มของตกแต่งอย่างอื่น นอกเหนือจากตัวอย่างที่ในแต่ละ Ver. บวกเพิ่ม อย่างละ 5 ฿ / 1 ชิ้น ค่ะ</li>
-<li>ชื่อ/ข้อความต่างๆ ที่อยากให้ใส่ลงบนลายน้ำ ได้ทั้งภาษาไทย ภาษาอังกฤษ ฯลฯ สามารถแจ้งได้ว่าคำไหนจัดวางแบบไหน หรือคำไหนตัวใหญ่หรือตัวเล็ก</li>
-<li>โทนสี ที่ต้องการ หากลูกค้ามีเรฟสีสามารถแนบเรฟสีมาได้เลยค่ะ</li>
-<li>การลงสีรบกวนลูกค้าแจ้งด้วยว่า อยากได้การลงแบบไล่สี หรือ ระบายแยกสีแต่ละสีในทีละจุดสลับกัน</li>
-<li>ระยะเวลาในการทำงาน 1-2 วัน/งาน</li>
-</ul>
+<div class="content">
+<p>- แจ้ง Ver.ของลายน้ำ (V.1-8) ว่าสนใจแบบไหน? หากจบแบบที่สนใจมาด้วย ยิ่งดีเลยค่ะ ✨ </p>
+<p>- กรณีต้องการเพิ่มของตกแต่งอย่างอื่น นอกเหนือจากตัวอย่างที่ในแต่ละ Ver. บวกเพิ่ม อย่างละ 5 ฿ / 1 ชิ้น ค่ะ</p>
+<p>- ชื่อ/ข้อความต่างๆ ที่อยากให้ใส่ลงบนลายน้ำ ได้ทั้งภาษาไทย ภาษาอังกฤษ ฯลฯ สามารถแจ้งได้ว่าคำไหนจัดวางแบบไหน หรือคำไหนตัวใหญ่หรือตัวเล็ก</p>
+<p>- โทนสี ที่ต้องการ หากลูกค้ามีเรฟสีสามารถแนบเรฟสีมาได้เลยค่ะ 🧵 </p>
+<p>- การลงสีรบกวนลูกค้าแจ้งด้วยว่า อยากได้การลงแบบไล่สี หรือ ระบายแยกสีแต่ละสีในทีละจุดสลับกัน</p>
+<p>- ระยะเวลาในการทำงาน 1-2 วัน/งาน</p>
+</div>
 
 <div class="image">
-<img src="87590762-D07E-4FDF-86ED-5BBB18533848.jpeg" alt="YCH">
+<img src="87590762-D07E-4FDF-86ED-5BBB18533848.jpeg">
+</div>
 </div>
 
+<!-- CMS -->
+<div class="block">
+<div class="label-black">CMS</div>
+<div class="label-blue">รายละเอียดการบรีฟ</div>
+
+<div class="content">
+<p>- แจ้ง ส่งภาพลายน้ำมาแจ้ง ว่าสนใจแบบไหน?</p>
+<p>- ทางร้านออกแบบ 'โอมากาเสะ' สามารถบรีฟของตกแต่ง หรือสิ่งต่างๆที่อยากให้วาดลงได้ค่ะ หรือแนวธีมงานก็ได้ แต่ไม่ยากจนเกินไป ทางร้านถนัดแนวน่ารักๆ</p>
+<p>- ชื่อ/ข้อความต่างๆ ที่อยากให้ใส่ลงบนลายน้ำ ได้ทั้งภาษาไทย ภาษาอังกฤษ ฯลฯ สามารถแจ้งได้ว่าคำไหนจัดวางแบบไหน หรือคำไหนตัวใหญ่หรือตัวเล็ก</p>
+<p>- โทนสี ที่ต้องการ หากลูกค้ามีเรฟสีสามารถแนบเรฟสีมาได้เลยค่ะ</p>
+<p>- ระยะเวลาในการทำงาน 1-2 วัน/งาน</p>
 </div>
-
-<div class="card">
-<h2>CMS</h2>
-<p style="background:#6ea1d9;color:white;display:inline-block;padding:8px 16px;border-radius:8px;margin-bottom:20px;">
-รายละเอียดการบรีฟ
-</p>
-
-<ul>
-<li>แจ้ง ส่งภาพลายน้ำมาแจ้ง ว่าสนใจแบบไหน?</li>
-<li>ทางร้านออกแบบ 'โอมากาเสะ' สามารถบรีฟของตกแต่ง หรือสิ่งต่างๆที่อยากให้วาดลงได้ค่ะ หรือแนวธีมงานก็ได้ แต่ไม่ยากจนเกินไป ทางร้านถนัดแนวน่ารักๆ</li>
-<li>ชื่อ/ข้อความต่างๆ ที่อยากให้ใส่ลงบนลายน้ำ ได้ทั้งภาษาไทย ภาษาอังกฤษ ฯลฯ สามารถแจ้งได้ว่าคำไหนจัดวางแบบไหน หรือคำไหนตัวใหญ่หรือตัวเล็ก</li>
-<li>โทนสี ที่ต้องการ หากลูกค้ามีเรฟสีสามารถแนบเรฟสีมาได้เลยค่ะ</li>
-<li>ระยะเวลาในการทำงาน 1-2 วัน/งาน</li>
-</ul>
 
 <div class="image">
-<img src="459F6BEE-9466-4674-9D66-9BAA2674DB82.jpeg" alt="CMS">
+<img src="459F6BEE-9466-4674-9D66-9BAA2674DB82.jpeg">
+</div>
 </div>
 
-</div>
-
-</section>
-
-<section class="footer">
+<div class="footer">
 Contact : Facebook : Lula | IG : chxb.lula | X : @LalaChxb<br><br>
 This is the work of Lula Shop. Do not claim or steal the work. Every work has an owner.<br>
 Thank you for your support from our lovely customers. Wishing you happiness forever.
-</section>
+</div>
 
+</div>
 </body>
 </html>
